src/objects/Customer_Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeSlot__c</fullName>
        <label>TimeSlot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9am to 12pm</fullName>
                </value>
                <value>
                    <fullName>12pm to 3pm</fullName>
                </value>
                <value>
                    <fullName>3pm to 6pm</fullName>
                </value>
                <value>
                    <fullName>6pm to 9pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitor</label>
        <referenceTo>Visitor__c</referenceTo>
        <relationshipLabel>Customer Inquiries</relationshipLabel>
        <relationshipName>Customer_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Inquiry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requested_Contact__c</columns>
        <columns>Contact_Preference__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>TimeSlot__c</columns>
        <columns>Feedback__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INQ{000000000}</displayFormat>
        <label>Customer Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>